getBookings Signed-off-by: Viswa <viswa@c.com>

--- a/src/test/resources/env/booking.qa.properties
+++ b/src/test/resources/env/booking.qa.properties
@@ -1,3 +1,4 @@
 baseUri=https://restful-booker.herokuapp.com
 usersBasePath=/booking
 createBookingTestData=create_booking_test_data.json
+getBookingsTestData=get_bookings_test_data.json
