--- a/src/test/resources/env/booking.qa.properties
+++ b/src/test/resources/env/booking.qa.properties
@@ -2,3 +2,4 @@ baseUri=https://restful-booker.herokuapp.com
 usersBasePath=/booking
 createBookingTestData=create_booking_test_data.json
 getBookingsTestData=get_bookings_test_data.json
+getBookingByIdTestData=get_bookingbyid_test_data.json
