Auth Signed-off-by: Viswa <viswa@c.com>

--- a/src/test/resources/env/booking.qa.properties
+++ b/src/test/resources/env/booking.qa.properties
@@ -1,5 +1,8 @@
 baseUri=https://restful-booker.herokuapp.com
 usersBasePath=/booking
+authBasePath=/auth
+authUname=admin
+authPwd=password123
 createBookingTestData=create_booking_test_data.json
 getBookingsTestData=get_bookings_test_data.json
 getBookingByIdTestData=get_bookingbyid_test_data.json
