--- a/src/test/resources/env/booking.qa.properties
+++ b/src/test/resources/env/booking.qa.properties
@@ -6,3 +6,4 @@ authPwd=password123
 createBookingTestData=create_booking_test_data.json
 getBookingsTestData=get_bookings_test_data.json
 getBookingByIdTestData=get_bookingbyid_test_data.json
+parUpatBookingTestData=parupdate_bookings_test_data.json
