update call Signed-off-by: Viswa <viswa@c.com>

--- a/src/test/resources/env/booking.qa.properties
+++ b/src/test/resources/env/booking.qa.properties
@@ -7,3 +7,4 @@ createBookingTestData=create_booking_test_data.json
 getBookingsTestData=get_bookings_test_data.json
 getBookingByIdTestData=get_bookingbyid_test_data.json
 parUpatBookingTestData=parupdate_bookings_test_data.json
+updateBookingTestData=update_booking_test_data.json
